[gd_scene load_steps=3 format=3 uid="uid://dlek2f03bdp7i"]

[ext_resource type="TileSet" uid="uid://bubs0dona1ndh" path="res://Assets/tilset.tres" id="1_rxg6h"]
[ext_resource type="Script" path="res://Scripts/Room.gd" id="2_ihrah"]

[node name="Room1" type="TileMap"]
tile_set = ExtResource("1_rxg6h")
cell_quadrant_size = 32
format = 2
layer_0/tile_data = PackedInt32Array(0, 1, 0, 65536, 1, 0, 131072, 1, 0, 196608, 1, 0, 262144, 1, 0, 327680, 1, 0, 393216, 1, 0, 458752, 1, 0, 524288, 1, 0, 589824, 720896, 7, 655360, 1, 0, 720896, 1, 0, 786432, 1, 0, 851968, 1, 0, 917504, 1, 0, 983040, 1, 0, 1048576, 1, 0, 1114112, 1, 0, 1, 1, 0, 1114113, 1, 0, 2, 1, 0, 1114114, 1, 0, 3, 1, 0, 1114115, 1, 0, 4, 1, 0, 1114116, 1, 0, 5, 1, 0, 1114117, 1, 0, 6, 1, 0, 1114118, 1, 0, 7, 1, 0, 1114119, 1, 0, 8, 1, 0, 1114120, 1, 0, 9, 1, 0, 1114121, 1, 0, 10, 131072, 7, 1114122, 1, 0, 11, 1, 0, 1114123, 1, 0, 12, 1, 0, 1114124, 1, 0, 13, 1, 0, 1114125, 1, 0, 14, 1, 0, 1114126, 720896, 7, 15, 1, 0, 1114127, 1, 0, 16, 1, 0, 1114128, 1, 0, 17, 1, 0, 1114129, 1, 0, 18, 1, 0, 1114130, 1, 0, 19, 1, 0, 1114131, 1, 0, 20, 1, 0, 1114132, 1, 0, 21, 1, 0, 1114133, 1, 0, 22, 1, 0, 1114134, 1, 0, 23, 1, 0, 1114135, 1, 0, 24, 1, 0, 1114136, 1, 0, 25, 1, 0, 1114137, 1, 0, 26, 1, 0, 1114138, 1, 0, 27, 1, 0, 1114139, 1, 0, 28, 1, 0, 1114140, 1, 0, 29, 1, 0, 1114141, 1, 0, 30, 1, 0, 1114142, 1, 0, 31, 1, 0, 65567, 1, 0, 131103, 1, 0, 196639, 1, 0, 262175, 1, 0, 327711, 720896, 7, 393247, 1, 0, 458783, 1, 0, 524319, 1, 0, 589855, 1, 0, 655391, 1, 0, 720927, 1, 0, 786463, 1, 0, 851999, 1, 0, 917535, 1, 0, 983071, 1, 0, 1048607, 1, 0, 1114143, 1, 0)
script = ExtResource("2_ihrah")

[node name="Marker0" type="Marker2D" parent="."]
position = Vector2(335, 15)
gizmo_extents = 185.4

[node name="Marker2" type="Marker2D" parent="."]
position = Vector2(1010, 179)
gizmo_extents = 185.4

[node name="Marker1" type="Marker2D" parent="."]
position = Vector2(463, 562)
gizmo_extents = 185.4

[node name="Marker3" type="Marker2D" parent="."]
position = Vector2(16, 307)
gizmo_extents = 185.4

[node name="Area2D" type="Area2D" parent="."]
disable_mode = 2
